# slicer-npz-loader

./: .gitignore  CMakeLists.txt  README.md  agents.md
.memory/: PROJECT_KNOWHOW.md
NpzLoader/: CMakeLists.txt  NpzLoader.py  SliceViewingTool.py
NpzLoader/Resources/UI/: NpzLoader.ui  NpzLoader_ui.py
